chart rendering fix
fixed a small error in the chart container rendering where it was a little too short

--- a/app/main.css
+++ b/app/main.css
@@ -102,7 +102,6 @@ a{
     position: relative;
     top: clamp(80px, 10vw, 130px);
     overflow-y: scroll;
-    height: 85vh;
 }
 #precipChart, #tempChart, #humidChart, #dewChart, #pressureChart{
     display: none;
